--- a/projects/index.html
+++ b/projects/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="/public/css/syntax.css">
   <link rel="stylesheet" href="/public/css/hyde.css">
   <link rel="stylesheet" href="/public/css/mystyles.css">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Poppins:400,500">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Poppins:400,500">
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
@@ -91,11 +91,11 @@
 
 <div class="project-images">
   
-  <div><img src="http://placehold.it/200x400"/></div>
+  <div><img src="https://placehold.it/200x400"/></div>
   
-  <div><img src="http://placehold.it/200x400"/></div>
+  <div><img src="https://placehold.it/200x400"/></div>
   
-  <div><img src="http://placehold.it/200x400"/></div>
+  <div><img src="https://placehold.it/200x400"/></div>
   
 </div>
 
@@ -120,11 +120,11 @@
 
 <div class="project-images">
   
-  <div><img src="http://placehold.it/200x200"/></div>
+  <div><img src="https://placehold.it/200x200"/></div>
   
-  <div><img src="http://placehold.it/200x200"/></div>
+  <div><img src="https://placehold.it/200x200"/></div>
   
-  <div><img src="http://placehold.it/200x200"/></div>
+  <div><img src="https://placehold.it/200x200"/></div>
   
 </div>
 
@@ -149,7 +149,7 @@
 
 <div class="project-images">
   
-  <div><img src="http://placehold.it/800x200"/></div>
+  <div><img src="https://placehold.it/800x200"/></div>
   
 </div>
 
